tests/errors/sem_test8.py
# sem_tests8.py 
test = 5
test += "hey"
print(test)